게시물 삭제

--- a/src/main/resources/templates/boarddetail.html
+++ b/src/main/resources/templates/boarddetail.html
@@ -7,5 +7,6 @@
 <body>
 <h1 th:text="${board.title}">제목 1</h1>
 <p th:text="${board.content}">내용</p>
+<a th:href="@{/board/delete(id=${board.id})}">글 삭제</a>
 </body>
 </html>
